--- a/staticman.yml
+++ b/staticman.yml
@@ -1,5 +1,5 @@
 member-submission:
-  allowedFields: ["name", "affiliation", "country", "email", "website", "languages", "expertise"]
+  allowedFields: ["name", "affiliation", "timezone", "email", "website", "languages", "expertise"]
 
   # (*) REQUIRED
   #
@@ -34,4 +34,4 @@ member-submission:
 
   # Names of required fields. If any of these isn't in the request or is empty,
   # an error will be thrown.
-  requiredFields: ["name", "affiliation", "country", "email", "expertise"]
+  requiredFields: ["name", "affiliation", "timezone", "email", "expertise"]
